Fix extra space because of empty translator div

--- a/themes/startwords/assets/scss/authors/_list.scss
+++ b/themes/startwords/assets/scss/authors/_list.scss
@@ -84,6 +84,10 @@ body.authors {
             content: "; "
         }
 
+        .translators:empty {
+            display: none;
+        }
+
         /* highlight linked author */
         /* disable
         &:target::before {
